--- a/index.html
+++ b/index.html
@@ -39,10 +39,11 @@
                         <h2 class="profissao">Desenvolvedora Web</h2>
                     </div>
                     <div class="texto-sobre">
-                        Sou acadêmica de Engenharia de Software,tenho 23 anos e iniciei meus estudos em programção 
-                        ainda em 2020, quando então migrei para o curso. Tive experiências com análise de dados utilizando Python, trabalhei em projetos de 
-                        Iniciação Científica organizados pela Samsung, neles pude aplicar conhecimentos em aplicações web e também utilizar metodologias
-                        ágeis.
+                        Sou acadêmica de Engenharia de Software, tenho 24 anos e iniciei meus estudos em programação 
+                        ainda em 2020.
+                         Tive experiências com análise de dados utilizando Python, trabalhei em projetos de 
+                        Iniciação Científica organizados pela Samsung, neles pude aplicar conhecimentos voltados para aplicações web e também utilizar metodologias
+                        ágeis. 
                     </div>
                 </article>
             </section>
@@ -62,7 +63,6 @@
                             <li>
                                 <p class="lista-titulo">Ensino Médio</p>
                                 <p class="lista-descricao">Colégio Antonio Batista Belo de Carvalho</p>
-
                             </li>
                         </ul>
                     </div>
